# memcpy-libs

./: CMakeLists.txt
src/asm/: asm-common.h  empty.c  memcpy-avx-head.S  memcpy-sse2-head.S  memcpy-ssse3-dev-v1.S  memcpy-ssse3-dev-v2.S  memcpy-ssse3-glibc.S  memmove-ssse3-glibc.S
tests/: #run-tests.py#  .#run-tests.py  run-tests.py
tests/large-file/: Makefile  sqlite3.h
tests/small-1/: 0.c  0.h  1.c  10.c  10.h  11.c  11.h  12.c  12.h  13.c  13.h  14.c  14.h  15.c  15.h  16.c  16.h  17.c  17.h  18.c  18.h  19.c  19.h  2.c  20.c  20.h  21.c  21.h  22.c  22.h  23.c  23.h  24.c  24.h  25.c  25.h  26.c  26.h  27.c  27.h  (+157 more)
tests/small-10/: 0.c  0.h  1.c  1.h  10.c  10.h  11.c  11.h  12.c  12.h  13.c  13.h  14.c  14.h  15.c  15.h  16.c  16.h  17.c  17.h  18.c  18.h  19.c  19.h  2.c  2.h  20.c  20.h  21.c  21.h  22.c  22.h  23.c  23.h  24.c  24.h  25.c  25.h  26.c  26.h  (+163 more)
tests/small-100/: 0.c  0.h  1.c  1.h  10.c  10.h  11.c  11.h  12.c  12.h  13.c  13.h  14.c  14.h  15.c  15.h  16.c  16.h  17.c  17.h  18.c  18.h  19.c  19.h  2.c  2.h  20.c  20.h  21.c  21.h  22.c  22.h  23.c  23.h  24.c  24.h  25.c  25.h  26.c  26.h  (+162 more)
tests/small-1000/: 0.c  0.h  1.c  1.h  10.c  10.h  11.c  11.h  12.c  12.h  13.c  13.h  14.c  14.h  15.c  15.h  16.c  16.h  17.c  17.h  18.c  18.h  19.c  19.h  2.c  2.h  20.c  20.h  21.c  21.h  22.c  22.h  23.c  23.h  24.c  24.h  25.c  25.h  26.c  26.h  (+161 more)
tests/small-250/: 0.c  0.h  1.c  1.h  10.c  10.h  11.c  11.h  12.c  12.h  13.c  13.h  14.c  14.h  15.c  15.h  16.c  16.h  17.c  17.h  18.c  18.h  19.c  19.h  2.c  2.h  20.c  20.h  21.c  21.h  22.c  22.h  (+171 more)
(+4 files in other folders)
